name:                memory-pool
version:             0.1.0.0
synopsis:            Short description
description:         Lock-free threadsafe pinned memory pool manager
homepage:            https://github.com/input-output-hk/memory-pool
license:             BSD3
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2022 IOHK
category:            Memory
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.6
                   , GHC == 9.8.2
                   , GHC == 9.10.1

library
  hs-source-dirs:      src
  exposed-modules:     System.Memory.Pool

  other-modules:
  build-depends:       base >= 4.9 && < 5
                     , primitive
                     , pvar >= 1.0

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Common
                    , Test.System.Memory.PoolTests
  build-depends:      base
                    , async
                    , memory-pool
                    , primitive
                    , pvar
                    , random
                    , reflection
                    , tasty
                    , tasty-quickcheck
                    , tasty-hunit
                    , QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall
                       -threaded
                       -O2
                       -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , deepseq
                     , memory-pool
                     , unliftio
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/memory-pool
